<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtlng"/>
        <EditText
            android:id="@+id/lng"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/lng"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/txtlat"/>
        <EditText
            android:id="@+id/lat"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/lat"/>
        <Button
            android:id="@+id/loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loc"/>
    </LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/location"/>
        <EditText
            android:id="@+id/et_loc"
            android:layout_width="0sp"

            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:selectAllOnFocus="true"
            android:text="湖北省武汉市硚口区古田路生活村"/>
        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">
        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/manual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/manul"/>
            <RadioButton
                android:id="@+id/gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps"/>
        </RadioGroup>
        <ToggleButton
            android:layout_width="wrap_content"
            android:id="@+id/tb"
            android:textOn="@string/satellite"
            android:textOff="@string/normal"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <!--<ToggleButton
        android:id="@+id/tb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:checked="false"
        android:textOff="普通地图"
        android:textOn="卫星地图"/>-->
</LinearLayout>
